Add comprehensive unit tests for FileAppLayer, IPLayerDemux, and new features including encryption, priority, and timestamp logging
- Implement tests for small and large file transfers in FileAppLayerTest
- Validate fragmentation and out-of-order packet handling in FileAppLayerTest
- Create IPLayerDemuxTest to verify protocol demultiplexing for ChatApp and FileApp
- Introduce NewFeaturesTest to assess encryption, priority settings, timestamp inclusion, and logging functionality
- Ensure robust handling of special characters and consecutive messages in NewFeaturesTest